# diffract

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  conftest.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  release.yml
configs/: default_launch.ini  fast_speed_without_disk.ini  sqlite.ini
docs/: conf.py  index.md  references.bib  writing_docs.md
docs/_ext/: metrics_table.py
docs/_static/: custom.css
docs/examples/: index.md  plot_configs.md  viz_showcase.md
docs/guide/: index.md  quickstart.md  what_is_diffract.md
docs/guide/recipes/: affine_filtering.md  exports.md  filtering.md  index.md  kernels_and_compute.md  merging.md  storage_and_cache.md  visualization.md  zarr_storage.md
docs/reference/: auto_session.md  configuration.md  index.md
docs/reference/metrics/: alignment.md  catalog.md  heavy_tailed.md  index.md  norms.md  quality.md  ranks.md  references.md  rmt.md  spectral.md
docs/reference/viz/: extraction.md  index.md  jitter.md  styling.md
docs/reference/viz/plots/: boxplot.md  cluster.md  grid.md  heatmap.md  index.md  line.md  scatter.md  violin.md
examples/: viz_showcase.ipynb
examples/configs/: boxplot_stable_rank.yaml  boxplot_stable_rank_jitter.yaml  cluster_bar_chart_weights_svals.yaml  grid_example.yaml  theme_example.yaml  violin_weights_svals_jitter.yaml
notebooks/configs/: hybrid.ini  load.yaml  scalar.py
notebooks/configs/plots/: grid_metric_matrix.yaml  grid_metric_per_row.yaml  grid_model_per_row.yaml  plot.yaml  styling.yaml
notebooks/configs/plots/boxplots/: compare_checkpoints.yaml
notebooks/configs/plots/cluster_bar_charts/: compare_checkpoints.yaml
notebooks/configs/plots/heatmaps/: compare_checkpoints.yaml
notebooks/configs/plots/refs/: attn_ptype.yaml  default.yaml  head.yaml  layer.yaml  metric.yaml  model.yaml  model_size.yaml  pretrain_step.yaml
notebooks/configs/plots/scatters/: compare_checkpoints.yaml
notebooks/configs/plots/sparklines/: compare_checkpoints.yaml
notebooks/configs/plots/templates/: box.yaml  default.yaml  heatmap.yaml  scatter.yaml  sparkline.yaml  violin.yaml
notebooks/configs/plots/violins/: compare_checkpoints.yaml
notebooks/notebooks_src/: constants.py  filters.py  load.py  load_checkpoints.py  utils.py
notebooks/notebooks_src/configuring/: core.py
scripts/: bench_pipeline.py  gen_golden_rmt.py  release_smoke.py
src/diffract/: __init__.py  containers.py  session.py
src/diffract/configs/: fast_speed_without_disk.ini  hybrid.ini  sqlite.ini
src/diffract/core/: __init__.py  constants.py
src/diffract/core/cache/: __init__.py  containers.py  interface.py  redis_manager.py  simple_manager.py
src/diffract/core/compute/: __init__.py  config.py  containers.py  decorator.py  exceptions.py  field_signature.py  metadata.py  registry.py
src/diffract/core/compute/execution/: __init__.py  _types.py  aggregation.py  aggregation_runner.py  enums.py  executor.py  parameter_runner.py  restrictions.py  strategy.py  utils.py
src/diffract/core/compute/extensions/: power_law.py  rmt.py  utils.py
src/diffract/core/compute/kernels/: __init__.py  (+9 more)
src/diffract/core/data/: __init__.py  identity.py  interface.py  proxy.py  repository.py  utils.py  view.py
src/diffract/core/export/: __init__.py  containers.py  exporters.py  interface.py
src/diffract/core/metadata/: __init__.py  containers.py  sqlite_index.py
src/diffract/core/parallel/: __init__.py  containers.py  execution.py
src/diffract/core/storage/: __init__.py  base_manager.py  containers.py  hdf5_manager.py  hybrid_manager.py  interface.py  metadata.py  ram_manager.py  serialization.py  sqlite_manager.py  zarr_manager.py
src/diffract/core/utils/: __init__.py  build.py  exceptions.py  fpenv.py  hashing.py  imports.py  math.py
src/diffract/session/: __init__.py  _identifiers.py  errors.py  field_cache.py  resolver.py  session.py  summaries.py  utils.py
src/diffract/session/namespaces/: __init__.py
src/diffract/viz/: __init__.py  colors.py  renderer.py  themes.py
src/diffract/viz/data/: __init__.py  detection.py  extraction.py  filtering.py  ordering.py  provider.py  types.py
src/diffract/viz/plots/: __init__.py  boxplot.py  cluster.py  common.py  configurer.py  heatmap.py  lines.py  scalar.py  scatter.py  sparkline.py  subplots.py  violin.py
src/diffract/viz/styling/: __init__.py  sources.py
tests/: conftest.py
tests/integration/: __init__.py  helpers.py  test_containers.py  test_full_stack_redis_hdf5.py  test_full_stack_redis_hybrid.py  test_full_stack_redis_sqlite.py  test_full_stack_simple_cache_storage.py  test_hybrid_zarr_s3.py  test_redis_cache.py  test_stress_concurrent_operations.py  test_stress_large_datasets.py  test_stress_session_operations.py
tests/unit/: conftest.py  test_bench_pipeline.py  test_compute_hints.py  test_containers_config_loading.py  test_containers_logging.py  test_session.py
tests/unit/core/cache/: test_simple_cache.py
tests/unit/core/compute/: test_default_kernels.py  test_executor.py  test_field_signature.py  test_registry.py
tests/unit/core/data/: test_identity.py
tests/unit/core/export/: test_exporters.py  test_formatter_hints.py  test_pandas_formatter.py  test_polars_formatter.py
tests/unit/core/parallel/: __init__.py  test_containers.py  test_runtime.py
tests/unit/core/session/: test_field_cache.py
tests/unit/core/storage/: test_hdf5_storage.py  test_hybrid_storage.py  test_ram_storage.py  test_serialization.py  test_sqlite_storage.py  test_zarr_storage.py
tests/unit/core/utils/: test_imports_utils.py  test_session_helpers.py
tests/unit/session/: __init__.py  test_compute_hints.py  test_export_field_validation.py  test_field_cache.py  test_identifier_validation.py  test_resolver.py  test_results_export_format.py  test_session.py  test_store_version.py
tests/unit/viz/: __init__.py  conftest.py  test_colors.py  test_common.py  test_data_source.py  test_field_ref_coercion.py  test_plots.py  test_renderer.py  test_themes.py
(+124 files in other folders)
