[project]
name = "diffract"
dynamic = ["version"]
description = "Deep neural network weight analysis and evolution tracking library"
readme = "README.md"
authors = [
    { name = "Risk AI Research" },
]
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
keywords = ["deep-learning", "neural-networks", "weight-analysis", "model-inspection", "spectral-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dependency-injector >=4.44.0",
    "h5py >=3.9.0",
    "numpy >=1.21.6,<=1.26.4",
    "ordered-set >=4.1.0",
    "powerlaw >=1.5.0",
    "rootutils >=1.0.7,<2",
    "scikit-rmt >=1.1.0",
    "scipy >=1.12.0,<1.14.0",
    "tqdm >=4.65.0",
    "typing-extensions >=4.8.0",
]

[project.optional-dependencies]
torch = ["torch >=2.7.0"]
redis = ["redis >=5.1.0"]
pandas = ["pandas >=2.1.0"]
polars = ["polars >=0.20.0"]
viz = [
    "plotly >=6.0.0",
    "kaleido >=0.2.1",
    "hydra-core >=1.3.0",
    "omegaconf >=2.3.0",
    "pyyaml >=6.0.1",
]
common = [
    "plotly >=6.0.0",
    "kaleido >=0.2.1",
    "hydra-core >=1.3.0",
    "omegaconf >=2.3.0",
    "pyyaml >=6.0.1",
    "pandas >=2.1.0",
    "polars >=0.20.0",
]
onnx = ["onnx >=1.16.0"]
tensorflow = ["tensorflow >=2.16.0"]
flax = ["flax >=0.10.0"]
frameworks = [
    "flax >=0.10.0",
    "onnx >=1.16.0",
    "tensorflow >=2.16.0",
]
zarr = [
    "zarr >=3.0.0",
    "fsspec >=2024.2.0",
    "s3fs >=2024.2.0",
]
notebooks = [
    "jupyter >=1.0.0",
    "matplotlib >=3.8.0",
    "ipywidgets >=8.1.0",
    "safetensors >=0.4.0",
    "einops >=0.7.0",
]
taichi = ["taichi >=1.7.3"]
docs = [
    "myst-parser >=2.0.0",
    "sphinx >=7.0.0",
    "sphinx-autobuild >=2024.10.0",
    "sphinx-autodoc-typehints >=1.25.0",
    "sphinx-copybutton >=0.5.0",
    "sphinx-design >=0.6.0",
    "furo >=2024.8.0",
    "sphinxext-opengraph >=0.9.0",
]
dev = [
    "bandit[toml] >=1.7.5",
    "interrogate >=1.7.0",
    "mypy >=1.10.1",
    "pandas >=2.1.0",
    "polars >=0.20.0",
    "pre-commit >=3.6.0",
    "pytest >=7.4.0",
    "pytest-cov >=4.0.0",
    "pytest-mock >=3.12.0",
    "pytest-watch >=4.2.0",
    "pytest-xdist >=3.3.0",
    "pytest-timeout >=2.4.0",
    "ruff >=0.9.0",
    "sybil >=6.0.0",
    "types-PyYAML >=6.0.0",
    "types-requests >=2.31.0",
    "zarr >=2.18.0",
    "fsspec >=2024.2.0",
    "plotly >=6.0.0",
    "kaleido >=0.2.1",
    "hydra-core >=1.3.0",
    "omegaconf >=2.3.0",
    "pyyaml >=6.0.1",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/diffract/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/diffract"]
include = [
    "src/diffract/viz/configs/*.yaml",
    "src/diffract/configs/*.ini",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/notebooks",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/ruff.toml",
]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--color=yes",
    "--durations=10",
    "--doctest-modules",
    "--cov=src/diffract",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::PendingDeprecationWarning",
    # taichi 1.7.x ships a docstring with an invalid escape sequence
    "ignore::SyntaxWarning:taichi.tools.image",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests that require GPU",
    "network: marks tests that require network access",
    "stress: marks tests as stress tests (slow, resource-intensive)",
]
minversion = "7.4"
testpaths = ["tests/", "README.md"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/diffract"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/conftest.py",
    "*/.venv/*",
    "*/venv/*",
    "*/.tox/*",
    "src/diffract/core/compute/kernels/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == \"__main__\":",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "TYPE_CHECKING",
]
show_missing = true
precision = 2
fail_under = 65
skip_covered = false
skip_empty = false

[tool.coverage.html]
directory = "htmlcov"

[tool.mypy]
python_version = "3.12"
# Mypy is used as a best-effort developer aid, not a hard gate.
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
extra_checks = false
show_error_codes = true
show_error_context = true
show_column_numbers = true
pretty = true
color_output = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "tensorflow.*",
    "jax.*",
    "onnx.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*",
    "sklearn.*",
    "numba.*",
    "cupy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
strict_optional = false

[tool.bandit]
exclude_dirs = ["tests", "notebooks", "examples", ".venv", "venv"]
skips = ["B101"]

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py", "conftest.py"]

[tool.codespell]
skip = "*.git,*.svg,*.pdf,*.pyc,__pycache__,*.egg-info,.mypy_cache,.pytest_cache,.coverage,htmlcov"
ignore-words-list = "nd,te,ser"
check-filenames = true
check-hidden = true

[tool.uv]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
